# bbs-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  TODO.md  deps.mk  setup.sh
src/: CMakeLists.txt  client.c  client.h  db.c  db.h  deps.mk  file_p.c  file_p.h  main.c  main.h  server.c  server.h  session.c  session.h  types.h  user.c  user.h  utils.c  utils.h
src/db/: CMakeLists.txt  db.c  db.h  db_common.c  db_common.h  db_postgresql.c  db_sqlite.c
src/libs/: CMakeLists.txt
src/libs/murmur3/: CMakeLists.txt  example.c  murmur3.c  murmur3.h
src/libs/sqlite/: CMakeLists.txt  sqlite3.h
